fix: markdown-view alignment in full view

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -238,6 +238,7 @@ header .logo:active {
   padding: 45px;
 }
 .preview.markdown-body {
+  margin: auto;
   padding-bottom: 50px;
 }
 
